fix: draw wall normaly when going off screen

--- a/src/editor/style.scss
+++ b/src/editor/style.scss
@@ -34,7 +34,6 @@ body {
                 background: rgb(191, 209, 238);
                 border: 1px solid white;
                 box-sizing: border-box;
-                pointer-events: none;
             }
 
             .grid {
